More verbose options for yasm4u.loggc and in common -XX:+PerfDisableSharedMem added.